--- a/Source/Digst.OioIdws.Rest.Server/Digst.OioIdws.Rest.Server.csproj
+++ b/Source/Digst.OioIdws.Rest.Server/Digst.OioIdws.Rest.Server.csproj
@@ -56,34 +56,34 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IdentityBuilder.cs" />
-    <Compile Include="IIdentityBuilder.cs" />
-    <Compile Include="IssuerAudiences.cs" />
-    <Compile Include="Issuing\AccessToken.cs" />
-    <Compile Include="Issuing\AccessTokenGenerator.cs" />
-    <Compile Include="Issuing\AccessTokenIssuer.cs" />
-    <Compile Include="ITokenProvider.cs" />
-    <Compile Include="OioIdwsAuthenticationAppBuilderExtensions.cs" />
-    <Compile Include="OioIdwsAuthenticationHandler.cs" />
-    <Compile Include="OioIdwsAuthenticationMiddleware.cs" />
-    <Compile Include="OioIdwsAuthenticationOptions.cs" />
-    <Compile Include="OioIdwsAuthorizationServiceHandler.cs" />
-    <Compile Include="OioIdwsClaim.cs" />
-    <Compile Include="OioIdwsToken.cs" />
-    <Compile Include="TokenRetrievalMethod.cs" />
-    <Compile Include="TokenRetrieval\AccessTokenRetriever.cs" />
-    <Compile Include="Issuing\ITokenValidator.cs" />
-    <Compile Include="Issuing\TokenValidator.cs" />
-    <Compile Include="Issuing\TokenValidationResult.cs" />
-    <Compile Include="OwinContextExtensions.cs" />
-    <Compile Include="Issuing\IAccessTokenGenerator.cs" />
-    <Compile Include="TokenStorage\ISecurityTokenStore.cs" />
-    <Compile Include="OioIdwsAuthorizationServiceAppBuilderExtensions.cs" />
-    <Compile Include="OioIdwsAuthorizationServiceMiddleware.cs" />
-    <Compile Include="OioIdwsAuthorizationServiceOptions.cs" />
+    <Compile Include="AuthorizationServer\OioIdwsAuthorizationServiceAppBuilderExtensions.cs" />
+    <Compile Include="Wsp\IdentityBuilder.cs" />
+    <Compile Include="Wsp\IIdentityBuilder.cs" />
+    <Compile Include="AuthorizationServer\IssuerAudiences.cs" />
+    <Compile Include="AuthorizationServer\Issuing\AccessToken.cs" />
+    <Compile Include="AuthorizationServer\Issuing\AccessTokenGenerator.cs" />
+    <Compile Include="AuthorizationServer\Issuing\AccessTokenIssuer.cs" />
+    <Compile Include="Wsp\ITokenProvider.cs" />
+    <Compile Include="Wsp\OioIdwsAuthenticationHandler.cs" />
+    <Compile Include="Wsp\OioIdwsAuthenticationMiddleware.cs" />
+    <Compile Include="Wsp\OioIdwsAuthenticationOptions.cs" />
+    <Compile Include="AuthorizationServer\OioIdwsAuthorizationServiceHandler.cs" />
+    <Compile Include="AuthorizationServer\TokenStorage\OioIdwsClaim.cs" />
+    <Compile Include="AuthorizationServer\TokenStorage\OioIdwsToken.cs" />
+    <Compile Include="Wsp\TokenRetrievalMethod.cs" />
+    <Compile Include="AuthorizationServer\TokenRetrieval\AccessTokenRetriever.cs" />
+    <Compile Include="AuthorizationServer\Issuing\ITokenValidator.cs" />
+    <Compile Include="AuthorizationServer\Issuing\TokenValidator.cs" />
+    <Compile Include="AuthorizationServer\Issuing\TokenValidationResult.cs" />
+    <Compile Include="AuthorizationServer\OwinContextExtensions.cs" />
+    <Compile Include="AuthorizationServer\Issuing\IAccessTokenGenerator.cs" />
+    <Compile Include="AuthorizationServer\TokenStorage\ISecurityTokenStore.cs" />
+    <Compile Include="AuthorizationServer\OioIdwsAuthorizationServiceMiddleware.cs" />
+    <Compile Include="AuthorizationServer\OioIdwsAuthorizationServiceOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TokenStorage\InMemorySecurityTokenStore.cs" />
-    <Compile Include="TokenProvider.cs" />
+    <Compile Include="AuthorizationServer\TokenStorage\InMemorySecurityTokenStore.cs" />
+    <Compile Include="Wsp\TokenProvider.cs" />
+    <Compile Include="Wsp\OioIdwsAuthenticationAppBuilderExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
