Completed implementation of AS/WSP components and client library.

--- a/Examples/Digst.OioIdws.Rest.Examples.WSP/Digst.OioIdws.Rest.Examples.WSP.csproj
+++ b/Examples/Digst.OioIdws.Rest.Examples.WSP/Digst.OioIdws.Rest.Examples.WSP.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CertificateUtil.cs" />
     <Compile Include="ConsoleLoggerFactory.cs" />
     <Compile Include="MyService.cs" />
     <Compile Include="Program.cs" />
