--- a/Tests/Digst.OioIdws.Rest.Server.Tests/Digst.OioIdws.Rest.Server.Tests.csproj
+++ b/Tests/Digst.OioIdws.Rest.Server.Tests/Digst.OioIdws.Rest.Server.Tests.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.IdentityModel" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.XML" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -89,6 +90,7 @@
     <Compile Include="OioIdwsAuthenticationMiddlewareTests.cs" />
     <Compile Include="PrincipalBuilderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RestTokenProviderTests.cs" />
     <Compile Include="TestServerWithClientCertificate.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
@@ -112,6 +114,11 @@
       <Project>{17cd5683-886b-4856-82b0-25bd99172764}</Project>
       <Name>Digst.OioIdws.Test.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\ExpiredSecurityToken.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
