Updated REST client example to support app settings configuration.

--- a/Examples/Digst.OioIdws.Rest.Examples.Client/App.config
+++ b/Examples/Digst.OioIdws.Rest.Examples.Client/App.config
@@ -3,4 +3,17 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
+  <appSettings>
+    <!--Use this setting to target the seperate server example -->
+    <!--<add key="AsEndpoint" value="https://digst.oioidws.rest.as:10001/accesstoken/issue"/> -->
+    <!--Use this setting to target the combined server example-->
+    <add key="AsEndpoint" value="https://digst.oioidws.rest.wsp:10002/accesstoken/issue"/>  
+    <add key="AudienceUri" value="https://wsp.itcrew.dk"/>
+    <add key="ClientCertificate" value="0919ed32cf8758a002b39c10352be7dcccf1222a"/>
+    <add key="StsCertificate" value="2e7a061560fa2c5e141a634dc1767dacaeec8d12"/>
+    <add key="StsEndpointAddress" value="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc"/>
+    <add key="TokenLifeTimeInSeconds" value="300"/>
+    <add key="WspTestEndpointAddress" value="https://digst.oioidws.rest.wsp:10002/hello"/>
+    <add key="WspTestEndpointAddress2" value="https://digst.oioidws.rest.wsp:10002/hello2"/>
+  </appSettings>
 </configuration>
