--- a/Examples/Digst.OioIdws.Rest.Examples.ServerCombinedNuget/Digst.OioIdws.Rest.Examples.ServerCombinedNuget.csproj
+++ b/Examples/Digst.OioIdws.Rest.Examples.ServerCombinedNuget/Digst.OioIdws.Rest.Examples.ServerCombinedNuget.csproj
@@ -35,11 +35,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Digst.OioIdws.Rest.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Digst.OioIdws.Rest.Server.1.0.0-alpha2\lib\net45\Digst.OioIdws.Rest.Common.dll</HintPath>
+      <HintPath>..\..\packages\Digst.OioIdws.Rest.Server.1.0.0\lib\net45\Digst.OioIdws.Rest.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Digst.OioIdws.Rest.Server, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Digst.OioIdws.Rest.Server.1.0.0-alpha2\lib\net45\Digst.OioIdws.Rest.Server.dll</HintPath>
+      <HintPath>..\..\packages\Digst.OioIdws.Rest.Server.1.0.0\lib\net45\Digst.OioIdws.Rest.Server.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Owin, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
