Undoing unintended commit.

--- a/Examples/Digst.OioIdws.WscExample/App.config
+++ b/Examples/Digst.OioIdws.WscExample/App.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<section name="oioIdwsWcfConfiguration" type="Digst.OioIdws.Wsc.OioWsTrust.Configuration, Digst.OioIdws.Wsc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
@@ -7,17 +7,18 @@
 	</configSections>
 	<system.diagnostics>
   <sources>
-    <source propagateActivity="false" name="System.ServiceModel" switchValue="Verbose">
+    <source propagateActivity="false" name="System.ServiceModel"
+    switchValue="Verbose">
     <listeners>
      <add name="ServiceModelMessageLoggingListener">
-      <filter type=""/>
+      <filter type="" />
      </add>
     </listeners>
    </source>
     <source name="System.ServiceModel.MessageLogging" switchValue="Verbose">
     <listeners>
      <add name="ServiceModelMessageLoggingListener">
-      <filter type=""/>
+      <filter type="" />
      </add>
     </listeners>
    </source>
@@ -30,24 +31,26 @@
     
     logKnownPii makes it possible to see the concrete value which the digest value represent in a SignedInfo reference element.
     -->
-    <source name="System.IdentityModel" switchValue="Verbose">
+    <source name="System.IdentityModel" logKnownPii="true" switchValue="Verbose">
       <listeners>
         <add name="ServiceModelMessageLoggingListener">
-          <filter type=""/>
+          <filter type="" />
         </add>
       </listeners>
     </source>
    <source name="Digst.OioIdws" switchValue="Information">
     <listeners>
      <add name="ServiceModelMessageLoggingListener">
-      <filter type=""/>
+      <filter type="" />
      </add>
     </listeners>
    </source>
   </sources>
   <sharedListeners>
-   <add initializeData="C:\temp\Digst.OioIdws.WscExample.svclog" type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" name="ServiceModelMessageLoggingListener" traceOutputOptions="Timestamp">
-    <filter type=""/>
+   <add initializeData="C:\temp\Digst.OioIdws.WscExample.svclog"
+    type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+    name="ServiceModelMessageLoggingListener" traceOutputOptions="Timestamp">
+    <filter type="" />
    </add>
   </sharedListeners>
  </system.diagnostics>
@@ -57,7 +60,7 @@
 	</oioIdwsWcfConfiguration>
 	<oioIdwsLoggingConfiguration logger="Digst.OioIdws.WscExample.Log4NetLogger, Digst.OioIdws.WscExample"/>
 	<startup>
-		<supportedRuntime sku=".NETFramework,Version=v4.6" version="v4.0"/>
+		<supportedRuntime sku=".NETFramework,Version=v4.5" version="v4.0"/>
 	</startup>
 	<system.serviceModel>
 		<diagnostics>
