Added extra logging to SOAP WSP example

--- a/Examples/Digst.OioIdws.WspExample/App.config
+++ b/Examples/Digst.OioIdws.WspExample/App.config
@@ -5,12 +5,12 @@
   </configSections>
   <system.diagnostics>
     <sources>
-      <source name="System.ServiceModel" switchValue="Information">
+      <source name="System.ServiceModel" logKnownPii="true" switchValue="Information">
         <listeners>
           <add name="ServiceModelMessageLoggingListener"/>
         </listeners>
       </source>
-      <source name="System.ServiceModel.MessageLogging">
+      <source name="System.ServiceModel.MessageLogging" logKnownPii="true">
         <listeners>
           <add name="ServiceModelMessageLoggingListener"/>
         </listeners>
@@ -48,7 +48,7 @@
   </startup>
   <system.serviceModel>
     <diagnostics>
-      <messageLogging logEntireMessage="true" logMalformedMessages="true" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true"/>
+      <messageLogging logKnownPii="true" logEntireMessage="true" logMalformedMessages="true" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true"/>
     </diagnostics>
     <extensions>
       <bindingExtensions>
