Updated WscExample to log more.

--- a/Examples/Digst.OioIdws.WscExample/App.config
+++ b/Examples/Digst.OioIdws.WscExample/App.config
@@ -7,7 +7,7 @@
 	</configSections>
 	<system.diagnostics>
   <sources>
-    <source propagateActivity="false" name="System.ServiceModel"
+    <source propagateActivity="false" name="System.ServiceModel" logKnownPii="true"
     switchValue="Verbose">
     <listeners>
      <add name="ServiceModelMessageLoggingListener">
@@ -15,7 +15,7 @@
      </add>
     </listeners>
    </source>
-    <source name="System.ServiceModel.MessageLogging" switchValue="Verbose">
+    <source name="System.ServiceModel.MessageLogging" logKnownPii="true" switchValue="Verbose">
     <listeners>
      <add name="ServiceModelMessageLoggingListener">
       <filter type="" />
@@ -64,7 +64,7 @@
 	</startup>
 	<system.serviceModel>
 		<diagnostics>
-			<messageLogging logEntireMessage="true" logMalformedMessages="true" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true"/>
+			<messageLogging logKnownPii="true" logEntireMessage="true" logMalformedMessages="true" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true"/>
 		</diagnostics>
 		<extensions>
 			<bindingExtensions>
