Added a new variant of the TokenService called TokenServiceCache that supports caching the token for the lifetime of the token.

--- a/Examples/Digst.OioIdws.WscJavaExample/Digst.OioIdws.WscJavaExample.csproj
+++ b/Examples/Digst.OioIdws.WscJavaExample/Digst.OioIdws.WscJavaExample.csproj
@@ -77,6 +77,10 @@
       <Project>{1dc7ea39-865d-4386-a814-9062441056fe}</Project>
       <Name>Digst.OioIdws.LibBas</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Source\Digst.OioIdws.OioWsTrust\Digst.OioIdws.OioWsTrust.csproj">
+      <Project>{021345B3-85F0-4AE3-9989-DC96772C7799}</Project>
+      <Name>Digst.OioIdws.OioWsTrust</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Source\Digst.OioIdws.Wsc\Digst.OioIdws.Wsc.csproj">
       <Project>{43dc7efc-447d-4d7d-a497-5cc7c60a006d}</Project>
       <Name>Digst.OioIdws.Wsc</Name>
