Updated tests to new certificates. Also updated some namespace prefixes in tests because namespace prefixes are no longer changed due to the bootstrap token scenario.

--- a/Examples/Digst.OioIdws.Rest.Examples.Client/App.config
+++ b/Examples/Digst.OioIdws.Rest.Examples.Client/App.config
@@ -8,8 +8,8 @@
     <!--<add key="AsEndpoint" value="https://digst.oioidws.rest.as:10001/accesstoken/issue"/> -->
     <!--Use this setting to target the combined server example-->
     <add key="AsEndpoint" value="https://digst.oioidws.rest.wsp:10002/accesstoken/issue"/>  
-    <add key="AudienceUri" value="https://wsp.itcrew.dk"/>
-    <add key="ClientCertificate" value="0919ed32cf8758a002b39c10352be7dcccf1222a"/>
+    <add key="AudienceUri" value="https://wsp.oioidws-net.dk"/>
+    <add key="ClientCertificate" value="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5"/>
     <add key="StsCertificate" value="d9f10c97aa647727adb64a349bb037c5c23c9a7a"/>
     <add key="StsEndpointAddress" value="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc"/>
     <add key="TokenLifeTimeInSeconds" value="300"/>
