--- a/Examples/Digst.OioIdws.WscExample/App.config
+++ b/Examples/Digst.OioIdws.WscExample/App.config
@@ -54,8 +54,8 @@
    </add>
   </sharedListeners>
  </system.diagnostics>
-	<oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.itcrew.dk">
-		<clientCertificate findValue="0919ed32cf8758a002b39c10352be7dcccf1222a" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+	<oioIdwsWcfConfiguration debugMode="true" stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" tokenLifeTimeInMinutes="5" wspEndpointID="https://wsp.oioidws-net.dk">
+		<clientCertificate findValue="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
 		<stsCertificate findValue="d9f10c97aa647727adb64a349bb037c5c23c9a7a" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
 	</oioIdwsWcfConfiguration>
 	<oioIdwsLoggingConfiguration logger="Digst.OioIdws.WscExample.Log4NetLogger, Digst.OioIdws.WscExample"/>
@@ -80,7 +80,7 @@
 					<clientCredentials>
 						<serviceCertificate>
 							<scopedCertificates>
-                <add findValue="dc35c0466ad606422adff717c9cb8e3274d8772e" storeLocation="LocalMachine" storeName="My" targetUri="http://Digst.OioIdws.Wsp:9090/HelloWorld" x509FindType="FindByThumbprint"/>
+                <add findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" storeLocation="LocalMachine" storeName="My" targetUri="http://Digst.OioIdws.Wsp:9090/HelloWorld" x509FindType="FindByThumbprint"/>
 							</scopedCertificates>
 						</serviceCertificate>
 					</clientCredentials>
@@ -97,7 +97,7 @@
 		<client>
 			<endpoint address="http://Digst.OioIdws.Wsp:9090/HelloWorld" behaviorConfiguration="LibBasBehaviourConfiguration" binding="LibBasBinding" bindingConfiguration="LibBasBindingConfiguration" contract="HelloWorldProxy.IHelloWorld">
 				<identity>
-					<dns value="eID JAVA test (funktionscertifikat)"/>
+					<dns value="wsp.oioidws-net.dk TEST (funktionscertifikat)"/>
 				</identity>
 			</endpoint>
 		</client>
