--- a/Examples/Digst.OioIdws.WspExampleNuGet/App.config
+++ b/Examples/Digst.OioIdws.WspExampleNuGet/App.config
@@ -70,7 +70,7 @@
           <!--Setting useIdentityConfiguration to true in a service behavior did not work because it happens too late in the pipe line and the service certificate would not be set to be the decrypting key-->
           <!--WIF is also needed in order to support STR transformations when signing and validating signatures. -->
           <serviceCredentials useIdentityConfiguration="true">
-            <serviceCertificate findValue="dc35c0466ad606422adff717c9cb8e3274d8772e" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
+            <serviceCertificate findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint"/>
           </serviceCredentials>
         </behavior>
       </serviceBehaviors>
@@ -81,7 +81,7 @@
     <identityConfiguration>
       <!--audienceUris specifies this service and is used to check that the SAML token from NemLog-in STS is indeed issued to this service.-->
       <audienceUris>
-        <add value="https://wsp.itcrew.dk"/>
+        <add value="https://wsp.oioidws-net.dk"/>
       </audienceUris>
       <!--issuerNameRegistry specifies the certificate of the Nemlog-In STS. Both thumbprint and Common Name must be specified.-->
       <!--Issuer certificate is embedded in the encrypted SAML assertion. Hence, it it does not need to be recieved out-of-band and placed in the certificate store-->
