--- a/Tests/Digst.OioIdws.Test/App.config
+++ b/Tests/Digst.OioIdws.Test/App.config
@@ -3,8 +3,8 @@
   <configSections>
     <section name="oioIdwsWcfConfiguration" type="Digst.OioIdws.Wsc.OioWsTrust.Configuration, Digst.OioIdws.Wsc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
   </configSections>
-  <oioIdwsWcfConfiguration stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" wspEndpointID="https://wsp.itcrew.dk" tokenLifeTimeInMinutes="5" debugMode="true">
-    <clientCertificate storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" findValue="0919ed32cf8758a002b39c10352be7dcccf1222a"/>
+  <oioIdwsWcfConfiguration stsEndpointAddress="https://SecureTokenService.test-nemlog-in.dk/SecurityTokenService.svc" wspEndpointID="https://wsp.oioidws-net.dk" tokenLifeTimeInMinutes="5" debugMode="true">
+    <clientCertificate storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" findValue="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5"/>
     <stsCertificate storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" findValue="d9f10c97aa647727adb64a349bb037c5c23c9a7a"/>
   </oioIdwsWcfConfiguration>
   <startup>
@@ -25,7 +25,7 @@
           <clientCredentials>
             <serviceCertificate>
               <scopedCertificates>
-                <add targetUri="http://Digst.OioIdws.Wsp:9090/HelloWorld" findValue="dc35c0466ad606422adff717c9cb8e3274d8772e" x509FindType="FindByThumbprint" storeLocation="LocalMachine" storeName="My"/>
+                <add targetUri="http://Digst.OioIdws.Wsp:9090/HelloWorld" findValue="1F0830937C74B0567D6B05C07B6155059D9B10C7" x509FindType="FindByThumbprint" storeLocation="LocalMachine" storeName="My"/>
               </scopedCertificates>
             </serviceCertificate>
           </clientCredentials>
@@ -44,7 +44,7 @@
         behaviorConfiguration="LibBasBehaviourConfiguration" binding="LibBasBinding"
         bindingConfiguration="LibBasBindingConfiguration" contract="HelloWorldProxy.IHelloWorld">
         <identity>
-          <dns value="eID JAVA test (funktionscertifikat)" />
+          <dns value="wsp.oioidws-net.dk TEST (funktionscertifikat)" />
         </identity>
       </endpoint>
     </client>
