--- a/Source/Digst.OioIdws.OioWsTrust/Digst.OioIdws.OioWsTrust.csproj
+++ b/Source/Digst.OioIdws.OioWsTrust/Digst.OioIdws.OioWsTrust.csproj
@@ -47,14 +47,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ITokenService.cs" />
+    <Compile Include="ProtocolChannel\ISignatureCaseMessageTransformer.cs" />
+    <Compile Include="ProtocolChannel\SignatureCaseBindingElement.cs" />
+    <Compile Include="ProtocolChannel\SignatureCaseChannel.cs" />
+    <Compile Include="ProtocolChannel\SignatureCaseChannelFactory.cs" />
+    <Compile Include="ProtocolChannel\SignatureCaseMessageTransformer.cs" />
     <Compile Include="TokenServiceConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReplyAttackCache.cs" />
-    <Compile Include="SignatureCase\ISignatureCaseMessageTransformer.cs" />
-    <Compile Include="SignatureCase\SignatureCaseBindingElement.cs" />
-    <Compile Include="SignatureCase\SignatureCaseChannel.cs" />
-    <Compile Include="SignatureCase\SignatureCaseChannelFactory.cs" />
-    <Compile Include="SignatureCase\SignatureCaseMessageTransformer.cs" />
     <Compile Include="TokenService.cs" />
     <Compile Include="TokenServiceCache.cs" />
     <Compile Include="Utils\RSAPKCS1SHA256SignatureDescription.cs" />
