--- a/Examples/Digst.OioIdws.Rest.Examples.Client/App.config
+++ b/Examples/Digst.OioIdws.Rest.Examples.Client/App.config
@@ -5,9 +5,9 @@
     </startup>
   <appSettings>
     <!--Use this setting to target the seperate server example -->
-    <!--<add key="AsEndpoint" value="https://digst.oioidws.rest.as:10001/accesstoken/issue"/> -->
+    <add key="AsEndpoint" value="https://digst.oioidws.rest.as:10001/accesstoken/issue"/> 
     <!--Use this setting to target the combined server example-->
-    <add key="AsEndpoint" value="https://digst.oioidws.rest.wsp:10002/accesstoken/issue"/>  
+    <!--<add key="AsEndpoint" value="https://digst.oioidws.rest.wsp:10002/accesstoken/issue"/>-->  
     <add key="AudienceUri" value="https://wsp.oioidws-net.dk"/>
     <add key="ClientCertificate" value="0E6DBCC6EFAAFF72E3F3D824E536381B26DEECF5"/>
     <add key="StsCertificate" value="d9f10c97aa647727adb64a349bb037c5c23c9a7a"/>
